--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -1,1 +1,35 @@
-<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}"{{ end }} />
+{{ $width := 0 }}
+{{ $height := 0 }}
+
+{{ $path := add .Page.RelPermalink (.Destination | safeURL) }}
+{{ if not (fileExists $path) }}
+    {{ $path = add "/static" (.Destination | safeURL) }}
+{{ end }}
+{{ warnf "%q" $path }}
+
+{{ if (fileExists $path) }}
+    {{ $fullPath := $path }}
+    {{ if not (findRE "^/?static" $path 1) }}
+        {{ $fullPath = add "/content" $fullPath }}
+    {{ end }}
+
+    {{ if ne $fullPath "image" }}
+    {{ warnf "%q" $fullPath }}
+    {{ with (imageConfig $fullPath) }}
+        {{ $width = .Width }}
+        {{ $height = .Height }}
+    {{ end }}
+    {{ end }}
+{{ else }}
+    {{ warnf "<img/> render hook: %q not found" $path }}
+{{ end }}
+
+
+<img
+    src="{{ .Destination | safeURL }}"
+    alt="{{ .Text }}"
+    loading="lazy"
+    {{ if ne $width 0 }}width="{{ $width }}"{{ end }}
+    {{ if ne $height 0 }}height="{{ $height }}"{{ end }}
+    {{ with .Title}}title="{{ . }}"{{ end }}
+/>
